--- a/index.html
+++ b/index.html
@@ -3,9 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tugas Fuad Fadil</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- Ini header Nav -->
+    <header class="nav-container">
+        <div class="logo-icon"></div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#my-profile">My Profile</a>
+            <a>My Portofolio</a>
+            <a>Message Me</a>
+        </nav>
+    </header>
+    <hr/>
+
+    <main>
+    <!-- Ini Home content -->
+     <section>
+        <header>
+            <h2>Welcome To My Website</h2>
+        </header>
+
+         <article>
+            <p>This is My Portofolio Website</p>
+            <div class="banner-container"></div>
+         </article>
+         
+     </section>
+
+    <!-- Ini My Profile content -->
+     <section id="my-profile">
+        <header>
+            <h2>My Profile</h2>
+        </header>
+        <article class="profile-content">
+            <div class="profile-item">
+                <div class="profile-icon profile1"></div>
+                <p>Formal</p>
+            </div>
+            <div class="profile-item">
+                <div class="profile-icon profile2"></div>
+                <p>Nonformal</p>
+            </div>
+            <div class="profile-item">
+                <div class="profile-icon profile3"></div>
+                <p>Informal</p>
+            </div>
+        </article>
+     </section>
+     <hr />
+
+    <!-- Ini My Portofolio content -->
+
+    <!-- Ini Message Me content -->
+
+    </main>
 </body>
 </html>
