--- a/index.html
+++ b/index.html
@@ -53,12 +53,38 @@
             </div>
         </article>
      </section>
-     <hr />
+   
 
     <!-- Ini My Portofolio content -->
-
+    <section id="my-profile">
+        <header>
+            <h2>My Portofolio</h2>
+        </header>
+        <article class="profile-content">
+            <div class="profile-item">
+                <div class="profile-icon portofolio1"></div>
+                <p>Teacher</p>
+            </div>
+            <div class="profile-item">
+                <div class="profile-icon portofolio2"></div>
+                <p>Design UIUX</p>
+            </div>
+            <div class="profile-item">
+                <div class="profile-icon portofolio3"></div>
+                <p>Religionist</p>
+            </div>
+        </article>
+     </section>
     <!-- Ini Message Me content -->
 
     </main>
+    <hr/>
+    <!-- Ini Footer content -->
+    <main>
+        <footer>
+            <p>Created By Fuad Fadil</p>
+        </footer>
+    </main>
+    <hr/>
 </body>
 </html>
